v1 of the updated portfolio

--- a/style.css
+++ b/style.css
@@ -1,6 +1,27 @@
 /* The @import rule below imports the Playfair Display and Source Sans Pro fonts into the stylesheet*/
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display&family=Source+Sans+Pro:wght@400&display=swap");
 
+
+.group {
+  display: flex;
+  flex-direction: row;
+  vertical-align: middle;
+}
+
+.item {
+  flex: 1;
+  margin: auto;
+}
+
+.item_left {
+  text-align: left;
+}
+
+.item_padded {
+  margin: 0px;
+  padding-left: 30px;
+}
+
 body {
   background-color: #eae2b7;
   color: #003049;
@@ -53,6 +74,7 @@ a:hover {
 
 nav a {
   padding-left: 20px;
+  text-align: center;
 }
 
 /* Images */
